--- a/kyverno/restrict-privileged.yaml
+++ b/kyverno/restrict-privileged.yaml
@@ -1,1 +1,18 @@
-
+apiVersion: kyverno.io/v1
+kind: ClusterPolicy
+metadata:
+  name: restrict-privileged
+spec:
+  validationFailureAction: Enforce
+  background: true
+  rules:
+    - name: privileged-off
+      match:
+        resources:
+          kinds: ["Pod"]
+      validate:
+        pattern:
+          spec:
+            containers:
+              - =(securityContext):
+                  =(privileged): false
