--- a/gatekeeper/templates/nolb_template.yaml
+++ b/gatekeeper/templates/nolb_template.yaml
@@ -1,1 +1,19 @@
-
+# policy-as-code/gatekeeper/templates/noprivileged_template.yaml
+apiVersion: templates.gatekeeper.sh/v1
+kind: ConstraintTemplate
+metadata:
+  name: k8snoprivileged
+spec:
+  crd:
+    spec:
+      names:
+        kind: K8sNoPrivileged
+  targets:
+    - target: admission.k8s.gatekeeper.sh
+      rego: |
+        package k8snoprivileged
+        violation[{"msg": msg}] {
+          c := input.review.object.spec.containers[_]
+          c.securityContext.privileged == true
+          msg := "policy violation"
+        }
