--- a/gatekeeper/templates/nolb_template.yaml
+++ b/gatekeeper/templates/nolb_template.yaml
@@ -1,19 +1,20 @@
-# policy-as-code/gatekeeper/templates/noprivileged_template.yaml
+# policy-as-code/gatekeeper/templates/nolb_template.yaml
 apiVersion: templates.gatekeeper.sh/v1
 kind: ConstraintTemplate
 metadata:
-  name: k8snoprivileged
+  name: disallowpubliclb
 spec:
   crd:
     spec:
       names:
-        kind: K8sNoPrivileged
+        kind: DisallowPublicLB
   targets:
     - target: admission.k8s.gatekeeper.sh
       rego: |
-        package k8snoprivileged
+        package disallowpubliclb
         violation[{"msg": msg}] {
-          c := input.review.object.spec.containers[_]
-          c.securityContext.privileged == true
+          svc := input.review.object
+          svc.kind == "Service"
+          svc.spec.type == "LoadBalancer"
           msg := "policy violation"
         }
