--- a/gatekeeper/templates/noprivileged_template.yaml
+++ b/gatekeeper/templates/noprivileged_template.yaml
@@ -1,10 +1,19 @@
-# policy-as-code/gatekeeper/constraints/noprivileged_constraint.yaml
-apiVersion: constraints.gatekeeper.sh/v1beta1
-kind: K8sNoPrivileged
+# policy-as-code/gatekeeper/templates/noprivileged_template.yaml
+apiVersion: templates.gatekeeper.sh/v1
+kind: ConstraintTemplate
 metadata:
-  name: no-privileged-containers
+  name: k8snoprivileged
 spec:
-  match:
-    kinds:
-      - apiGroups: [""]
-        kinds: ["Pod"]
+  crd:
+    spec:
+      names:
+        kind: K8sNoPrivileged
+  targets:
+    - target: admission.k8s.gatekeeper.sh
+      rego: |
+        package k8snoprivileged
+        violation[{"msg": msg}] {
+          c := input.review.object.spec.containers[_]
+          c.securityContext.privileged == true
+          msg := "policy violation"
+        }
