--- a/gatekeeper/templates/requiredlabels_template.yaml
+++ b/gatekeeper/templates/requiredlabels_template.yaml
@@ -1,1 +1,21 @@
-
+# policy-as-code/gatekeeper/templates/requiredlabels_template.yaml
+apiVersion: templates.gatekeeper.sh/v1
+kind: ConstraintTemplate
+metadata:
+  name: requiredlabels
+spec:
+  crd:
+    spec:
+      names:
+        kind: RequiredLabels
+  targets:
+    - target: admission.k8s.gatekeeper.sh
+      rego: |
+        package requiredlabels
+        violation[{"msg": msg}] {
+          required := {"owner","env","service"}
+          provided := {k | k := input.review.object.metadata.labels[_]}
+          diff := required - provided
+          count(diff) > 0
+          msg := "policy violation"
+        }
