--- a/gatekeeper/constraints/requiredlabels_constraint.yaml
+++ b/gatekeeper/constraints/requiredlabels_constraint.yaml
@@ -1,1 +1,12 @@
-
+# policy-as-code/gatekeeper/constraints/requiredlabels_constraint.yaml
+apiVersion: constraints.gatekeeper.sh/v1beta1
+kind: RequiredLabels
+metadata:
+  name: require-common-labels
+spec:
+  match:
+    kinds:
+      - apiGroups: ["apps"]
+        kinds: ["Deployment","StatefulSet","DaemonSet"]
+      - apiGroups: [""]
+        kinds: ["Pod","Service"]
