--- a/supply-chain/cosign-verify.yaml
+++ b/supply-chain/cosign-verify.yaml
@@ -1,1 +1,14 @@
-
+# policy-as-code/supply-chain/cosign-verify.yaml
+apiVersion: cosign.sigstore.dev/v1alpha1
+kind: ClusterImagePolicy
+metadata:
+  name: cosign-verify
+spec:
+  images:
+    - glob: "**"
+  authorities:
+    - key:
+        data: |
+          sophielog
+  policy:
+    type: all
