--- a/supply-chain/secret-scan.yaml
+++ b/supply-chain/secret-scan.yaml
@@ -1,1 +1,26 @@
-
+# policy-as-code/supply-chain/secret-scan.yaml
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: secret-scan
+  namespace: policy-system
+spec:
+  schedule: "0 */6 * * *"
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          containers:
+            - name: gitleaks
+              image: zricethezav/gitleaks:latest
+              args:
+                - "--repo-path=/workspace"
+                - "--no-git"
+                - "--redact"
+              volumeMounts:
+                - name: workspace
+                  mountPath: /workspace
+          volumes:
+            - name: workspace
+              emptyDir: {}
+          restartPolicy: OnFailure
